# AtCoderStudyBooster

./: .gitignore  .pre-commit-config.yaml  README.md  dev.sh  problem_downloader.py  pyproject.toml  requirements.txt  samplecase_checker.py  setup.cfg  setup.py
.github/workflows/: deploy.yaml
atcdr/: check_samplecase.py  download.py  download_problem.py  generate.py  login.py  logout.py  main.py  markdown.py  memo.md  open.py  samplecase_checker.py  submit.py  test.py
atcdr/accessGPT/: access_gpt_by_applescript.py
atcdr/operate_gpt/: base.py  by_api.py  by_applescript.py  operate_gpt.py
atcdr/util/: by_api.py  by_applescript.py  calc_api_cost.py  cost.py  execute.py  filename.py  filetype.py  gpt.py  operate_gpt.py  parse.py  problem.py  safari_operator_by_applescript.py  session.py
