[project]
name = "AtCoderStudyBooster"
version = "0.1.0"
description = "A tool to download and manage AtCoder problems."
authors = [
    { name = "yuta6", email = "46110512+yuta6@users.noreply.github.com" }
]
dependencies = [
    "beautifulsoup4",
    "colorama",
    "fire",
    "requests",
    "tiktoken",
    "yfinance",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"atcdr" = "atcdr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy",
    "pre-commit",
    "pytest"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["atcdr"]
