[project]
name = "AtCoderStudyBooster"
version = "0.23"
description = "A tool to download and manage AtCoder problems."
authors = [
    { name = "yuta6", email = "46110512+yuta6@users.noreply.github.com" }
]
dependencies = [
    "beautifulsoup4",
    "fire",
    "requests",
    "tiktoken",
    "yfinance",
    "types-requests>=2.32.0.20240712",
    "types-beautifulsoup4>=4.12.0.20240511",
    "markdownify>=0.13.1",
    "rich>=13.7.1",
    "questionary>=2.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }
urls = { Homepage = "https://github.com/yuta6/AtCoderStudyBooster" }

[project.scripts]
"atcdr" = "atcdr.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy",
    "pre-commit",
    "pytest"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["atcdr"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # チェックするコードの種類 (E: エラー, F: フォーマッティング, I: isort)
ignore = ["E501"]  # E501 - 行の長さ制限を無視

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
